--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,17 +1,17 @@
-<!--
-To change this template, choose Tools | Templates
-and open the template in the editor.
--->
 <!DOCTYPE html>
 <html>
-    <head>
-        <title></title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <link rel='stylesheet' media='screen' href='maze.css' type='text/css' />
-        <script src='jquery-1.9.1.js'></script>
-        <script src='maze.js'></script>
-    </head>
-    <body>
-        <div>TODO write content</div>
-    </body>
+	<head>
+		<title>Mini-RPG</title>
+		<link rel="stylesheet" type="text/css" href="css/style.css" />
+		<!--[if lt IE 9]><script type="text/javascript" src="js/excanvas.compiled.js"></script><![endif]-->
+		<script type="text/javascript" src="js/json2.js"></script>
+		<script type="text/javascript" src="js/oXHR.js"></script>
+		<script type="text/javascript" src="js/classes/Tileset.js"></script>
+		<script type="text/javascript" src="js/classes/Map.js"></script>
+		<script type="text/javascript" src="js/classes/Personnage.js"></script>
+		<script type="text/javascript" src="js/rpg.js"></script>
+	</head>
+	<body>
+		<canvas id="canvas"></canvas>
+	</body>
 </html>
